tests/paczka1/small_fuzzy/73200041.err
Error in line 1: MftGZoMBQu S838 44,9
Error in line 7: sfQQLLZo9m3 A7+4 46,9
Error in line 8: 6CZeTT4V S856 13,5
Error in line 11: 6CZeTT4V S871 -2,9
Error in line 9: 6CZeTT4V S871 17,9
Error in line 2: sfQQLLZo9m3 S838 73,3
Error in line 13: 6CZeTT4V S856 30,9
